--- a/src/styles/colors.scss
+++ b/src/styles/colors.scss
@@ -1,4 +1,4 @@
-:root {
+html {
   --blue-triangle: #7cc7ff;
   --green-triangle: #a0d4b8;
   --pink-triangle: #ff7cc7;
